--- a/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
+++ b/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
@@ -31,10 +31,6 @@
 
 从空间分布来看， 地区差异性较大(图 1.2) 。海南、河北、江苏、贵州、云南、西藏、山东、 青海、上海、新疆 10 个省(区、市)总体偏小，其中海南、河北、江苏、贵州、云南 5 个省 	(区、市)明显偏小；重庆、江西、湖北、吉林、黑龙江、福建、四川、湖南 8 个省(区、市) 总体偏大，其中重庆明显偏大；其它省(区、市)基本正常。
 
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.006.png)图 1.1   2012 ~ 2022 年全国 10 米高度层年平均风速距平百分率(单位：%)
-
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.007.png)图 1.2   2022 年各省(区、市)10 米高度层年平均风速距平百分率(单位：%)
-
 
 ### (二)70 米高度
 
@@ -42,23 +38,14 @@
 
 2022 年，我国 70 米高度平均风速约为 5.4m/s。从空间分布(图 1.3)看，东北大部、华北北部、内蒙古大部、宁夏中南部、陕西北部、甘肃西部、新疆东部和北部的部分地区、  青藏高原大部、云贵高原和广西等地的山区、东南沿海等地年平均风速一般大于 6.0m/s，其 中，东北东部、内蒙古中东部、新疆北部和东部的部分地区、甘肃西部和北部、青藏高原大 部等地年平均风速达到 7.0m/s， 部分地区达到 8.0m/s 以上。山东西部及东部沿海、江苏大部、 安徽东部等地年平均风速为 5.0m/s ~ 6.0m/s。我国其他地区年平均风速一般低于 5.0m/s，  主要分布在中部和东部平原地区及新疆的盆地区域。
 
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.008.png)|图 1.3   2022 年全国 70 米高度层年平均风速分布(单位：m/s)
-
 与近 10 年相比， 新疆北部和西南部、青海中部、甘肃北部、云南大部、贵州南部、广西沿海、 广东南部、海南北部、江苏大部、山东大部、河北大部、内蒙古西部和中部的部分地区年平 均风速偏小，其中新疆北部、河北大部、山东北部、江苏南部、云南北部等地年平均风速明显偏小。黑龙江北部、吉林东部、四川东部、重庆、广西北部、广东西部、福建大部、湖南 北部、湖北西部、河南南部等地年平均风速偏大，  其中吉林东部、四川东部、重庆、湖南北部、 湖北西部、广东西部等地年平均风速明显偏大。其他地区年平均风速接近正常(图 1.4)。
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.009.png)|图 1.4   2022 年全国 70 米高度层年平均风速距平百分率分布(单位：%)
 
 
 2. 风功率密度
 
 2022 年，全国 70 米高度年平均风功率密度为 193.1 W/m² 。从空间分布(图 1.5)看， 东北大部、华北大部、青藏高原大部、云贵高原、西南地区和华东地区的山地、东南沿海等 地年平均风功率密度一般超过 200W/m² 。其中，内蒙古中东部、黑龙江东部、河北北部、 山西北部、新疆北部和东部、青藏高原和云贵高原的山脊地区等地超过 300 W/m² 。我国其他 地区年平均风功率密度一般低于 200 W/m² ，其中中部和东部平原地区及新疆的盆地区域低于150W/m² 。
 
-与近 10 年相比， 新疆北部、青海中部、云南北部、贵州南部、河北北部和南部、山东大部、 江苏南部、浙江东北部沿海等地年平均风功率密度偏小。黑龙江南部、吉林东部、四川东部、 重庆、湖北东南部、湖南西北部、广西南部的部分地区、福建东部的部分地区年平均风功率 密度偏大。其他地区年平均风功率密度接近正常(图 1.6)。
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.010.png)|图 1.5   2022 年全国 70 米高度层年平均风功率密度分布(单位：W/m2 )
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.011.png)|图 1.6   2022 年全国 70 米高度层年平均风功率密度距平百分率分布(单位：%)
+与近 10 年相比， 新疆北部、青海中部、云南北部、贵州南部、河北北部和南部、山东大部、 江苏南部、浙江东北部沿海等地年平均风功率密度偏小。黑龙江南部、吉林东部、四川东部、 重庆、湖北东南部、湖南西北部、广西南部的部分地区、福建东部的部分地区年平均风功率 密度偏大。其他地区年平均风功率密度接近正常(图 1.6)
 
 
 3. 各省(区、市)风能资源
@@ -67,15 +54,9 @@
 
 各省(区、市)70 米高度年平均风速和风功率密度具体数值详见附录 3。
 
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.012.png)图 1.7   2022 年各省(区、市)70 米高度层年平均风速(m/s)与平均风功率密度(单位：W/m2 )
-
 与近 10 年相比，  2022 年多数省(区、市) 年平均风速接近平均值，上海、河北、云南、江苏、山东、海南、宁夏、北京、贵州、青海、天津 11 个省(区、市)偏小；重庆、福建、 湖北、吉林 4 个省(区、市) 偏大。2022 年多数省(区、市)  的年平均风功率密度接近平均值， 偏小的地区有上海、云南，偏大的地区有重庆(图 1.8)。
 
 与 2021 年相比，2022 年山西、宁夏、江苏、山东、河北、天津、内蒙古、西藏、河南 9 个省(区、市)  年平均风速偏小，  云南明显偏小，湖北、江西、湖南 3 个省(区、市)  年平 均风速偏大，重庆明显偏大，其他省(区、市)  70 米高度年平均风速与 2021 年接近。2022 年云南、山西、宁夏、江苏 4 个省(区、市)年平均风功率密度偏小，重庆年平均风功率密 度偏大，其他省(区、市)与 2021 年接近(图 1.9)。
-
-
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.013.png)图 1.8   2022 年各省(区、市)70 米高度层年平均风速与年平均风功率密度距平百分率(单位：%)
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.014.png)图 1.9   2022 年与 2021 年各省(区、市)70 米高度层年平均风速与年平均风功率密度距平百分率差(单位：%)
 
 
 ### (三)100 米高度
@@ -84,24 +65,15 @@
 
 2022 年，  我国 100 米高度年平均风速约为 5.7m/s。从空间分布(图 1.10) 看，  东北大部、内蒙古、华北北部、华东北部、宁夏中南部、陕西北部、甘肃西部、新疆东部和北部的部分地区、 青藏高原、云贵高原和广西等地的山区、中东部地区沿海等地年平均风速大于 6.0m/s，  其中， 东北西部和东北部、内蒙古中部和东部、新疆北部和东部的部分地区、甘肃西部、青藏高原 大部等地年平均风速达到 7.0m/s，部分地区达到 8.0m/s 以上。
 
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.015.png)|图 1.10   2022 年全国 100 米高度层年平均风速分布(单位：m/s)
-
 2. 风功率密度
 
 2022 年，  全国 100 米高度年平均风功率密度为 227.4 W/m² 。从空间分布(图 1.11) 看， 内蒙古中东部、黑龙江东部、吉林西部及东部的部分地区、河北北部、山西北部、新疆北部 和东部的部分地区、青藏高原大部、云贵高原的山脊地区、福建东部沿海等地年平均风功率 密度一般超过 300 W/m² 。除华东中部和西部、四川盆地、陕西南部、云南西南部、西藏东南 部、新疆南疆盆地等地的部分地区年平均风功率密度小于 150 W/m² ，其余我国大部年平均风功率密度一般都超过 150 W/m² 。
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.016.png)|图 1.11   2022 年全国 100 米高度层年平均风功率密度分布(单位：W/m2 )
-
 
 3. 各省(区、市)风能资源
 
 2022 年，各省(区、市)100米高度年平均风速在 4.3m/s ~ 7.0m/s 之间，有 22 个 省(区、市)年平均风速超过 5.0m/s，其中辽宁、黑龙江、吉林、内蒙古、西藏、上海、青 海 7 个省(区)年平均风速超过 6.0m/s。各省(区、市)  100 米高度年平均风功率密度在 98.64 W/m²   ~  350.59 W/m²  之 间，有 23 个省(区、市 ) 年平均风功率密度超过150W/m²，其中13个省(区、市)年平均风功率密度超过200W/m²，吉林、内蒙古 2 个省(区、 市)年平均风功率密度超过 300 W/m² 。
 
 各省(区、市)100 米高度年平均风速和风功率密度具体数值详见附录 4。
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.017.png)
-
-
 
 ## 二、太阳能资源
 
@@ -111,17 +83,12 @@
 
 2022 年，全国太阳能资源总体为偏大年景(图 2.1)。全国平均年水平面总辐照量为1563.4kWh/m²，为近30年最高值，较近30年平均值偏大45.3kWh/m²，较近10年平均值偏大54.0 kWh/m²，较2021年偏大70.0 kWh/m²。
 
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.018.png)图 2.1   全国平均年水平面总辐照量年际变化(单位：kWh/m²)
-
-
 2. 水平面总辐照量西部地区大于中东部地区
 
 我国太阳能资源地区性差异较大， 呈现西部地区大于中东部地区， 高原、少雨干燥地区大， 平原、多雨高湿地区小的特点(图 2.2)。
 根据我国太阳能资源总量等级划分标准1，2022年，新疆大部、西藏、西北、西南西部、内蒙古大部、华北、华中大部、华东大部、华南大部地区年水平面总辐照量超过 1400kWh/m2，
 其中，西藏大部、青海中部及北部局部地区年水平面总辐照量超过 1750kWh/m2，为太阳能资源最丰富区；
 新疆大部、内蒙古大部、西北中部及东部、华北、华东、华南东部等地年太阳总辐射年辐照量划分为四个等级：最丰富(≥1750kWh/m²)、很丰富(1400~1750kWh/m²)、丰富(1050~1400kWh/m²)、一般(<1050kWh/m²)。
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.019.png)|图 2.2   2022 年全国年水平面总辐照量分布图(单位：kWh/m²)
 
 水平面总辐照量 1400kWh/m2 ~ 1750kWh/m2，为太阳能资源很丰富区；
 东北东部、四川东部、 重庆、贵州、湖南西部、广西北部及东部等地年水平面总辐照量 1050kWh/m2 ~ 1400kWh/ m2 ，为太阳能资源丰富区。
@@ -135,10 +102,6 @@
 与近 30 年水平面总辐照量平均值相比，2022年新疆北部、西藏东南部、黑龙江、吉林、 辽宁等地偏大，山西、陕西、山东等局部地区明显偏大，河北、北京、天津、陕西南部、山西、 四川东部、重庆、云南北部、贵州、广西、湖南、湖北、河南、安徽、江西、广东、福建、浙江、 江苏等地异常偏大。
 新疆西南部及东部、青海中部及西部、四川西部、云南西部、内蒙古西部偏小；新疆南部、 西藏西部、青海中部、内蒙古西北部明显偏小；西藏西部等地异常偏小。
 从各省(区、市)分布(图 2.4)来看，甘肃、内蒙古、宁夏、海南年水平面总辐照量与 近 30 年均值较接近，云南、辽宁、黑龙江、吉林偏大，山东明显偏大，河北、山西、四川、北京、陕西、江苏、天津、上海、广西、河南、广东、浙江、福建、安徽、贵州、湖北、江西、湖南、重庆异常偏大，新疆、青海偏小，西藏明显偏小。
-
-
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.020.png)|图 2.3   2022 年全国年水平面总辐照量距平分布(单位：kWh/m²)
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.021.png)图 2.4   2022 年各省(区、市)年水平面总辐照量距平(单位：kWh/m²)
 
 
 ### (二)固定式光伏发电太阳能资源
