--- a/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
+++ b/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
@@ -1,4 +1,4 @@
-﻿中国风能太阳能资源
+中国风能太阳能资源
 
 年景公报(2022 年)
 
@@ -19,7 +19,7 @@
 
 
 ## 摘 要 ABSTRACT
-2022 年，全国风能资源为正常略偏小年景。10 米高度年平均 风速较近 10 年(2012 ~ 2021 年，下同) 平均值偏小 0.82%，较 2021 年偏小 0.96%。70 米高度年平均风速约 5.4m/s，  年平均风 功率密度约 193.1 W/m²；  100 米高度年平均风速约 5.7m/s，年平 均风功率密度约 227.4 W/m² 。其中，湖北、江西、湖南、重庆较 近 10 年平均值偏大，  贵州、山西、宁夏、江苏、山东、河北、天津、 内蒙古、西藏、河南、云南偏小，  其他地区与近 10 年平均值接近。</p><p>2022 年，全国太阳能资源为偏大年景。年平均水平面总辐 照 量 约 1563.4 kWh/m²，   为 近 30 年(1992 ~  2021 年，   下 同 )  最高，较近 30 年平均值偏大 45.3kWh/m²，较近 10 年平均值 偏 大 54.0kWh/m²，   较 2021 年 偏 大 70.0kWh/m²；   光 伏 发 电 年 最佳斜面总辐照量约 1815.8 kWh/m²，较近 30 年平均值偏大 40.8kWh/m²，  较近 10 年平均值偏大 50.8kWh/m²，  较 2021 年偏 大 67.1kWh/m²。其中，东北、华北、华中、华东、华南、西南地 区东部等地偏大，青藏高原西部偏小
+2022 年，全国风能资源为正常略偏小年景。10 米高度年平均 风速较近 10 年(2012 - 2021 年，下同) 平均值偏小 0.82%，较 2021 年偏小 0.96%。70 米高度年平均风速约 5.4m/s，  年平均风 功率密度约 193.1 W/m²；  100 米高度年平均风速约 5.7m/s，年平 均风功率密度约 227.4 W/m² 。其中，湖北、江西、湖南、重庆较 近 10 年平均值偏大，  贵州、山西、宁夏、江苏、山东、河北、天津、 内蒙古、西藏、河南、云南偏小，  其他地区与近 10 年平均值接近。</p><p>2022 年，全国太阳能资源为偏大年景。年平均水平面总辐 照 量 约 1563.4 kWh/m²，   为 近 30 年(1992 -  2021 年，   下 同 )  最高，较近 30 年平均值偏大 45.3kWh/m²，较近 10 年平均值 偏 大 54.0kWh/m²，   较 2021 年 偏 大 70.0kWh/m²；   光 伏 发 电 年 最佳斜面总辐照量约 1815.8 kWh/m²，较近 30 年平均值偏大 40.8kWh/m²，  较近 10 年平均值偏大 50.8kWh/m²，  较 2021 年偏 大 67.1kWh/m²。其中，东北、华北、华中、华东、华南、西南地 区东部等地偏大，青藏高原西部偏小
 
 
 
@@ -36,7 +36,7 @@
 
 1. 风速
 
-2022 年，我国 70 米高度平均风速约为 5.4m/s。从空间分布(图 1.3)看，东北大部、华北北部、内蒙古大部、宁夏中南部、陕西北部、甘肃西部、新疆东部和北部的部分地区、  青藏高原大部、云贵高原和广西等地的山区、东南沿海等地年平均风速一般大于 6.0m/s，其 中，东北东部、内蒙古中东部、新疆北部和东部的部分地区、甘肃西部和北部、青藏高原大 部等地年平均风速达到 7.0m/s， 部分地区达到 8.0m/s 以上。山东西部及东部沿海、江苏大部、 安徽东部等地年平均风速为 5.0m/s ~ 6.0m/s。我国其他地区年平均风速一般低于 5.0m/s，  主要分布在中部和东部平原地区及新疆的盆地区域。
+2022 年，我国 70 米高度平均风速约为 5.4m/s。从空间分布(图 1.3)看，东北大部、华北北部、内蒙古大部、宁夏中南部、陕西北部、甘肃西部、新疆东部和北部的部分地区、  青藏高原大部、云贵高原和广西等地的山区、东南沿海等地年平均风速一般大于 6.0m/s，其 中，东北东部、内蒙古中东部、新疆北部和东部的部分地区、甘肃西部和北部、青藏高原大 部等地年平均风速达到 7.0m/s， 部分地区达到 8.0m/s 以上。山东西部及东部沿海、江苏大部、 安徽东部等地年平均风速为 5.0m/s - 6.0m/s。我国其他地区年平均风速一般低于 5.0m/s，  主要分布在中部和东部平原地区及新疆的盆地区域。
 
 与近 10 年相比， 新疆北部和西南部、青海中部、甘肃北部、云南大部、贵州南部、广西沿海、 广东南部、海南北部、江苏大部、山东大部、河北大部、内蒙古西部和中部的部分地区年平 均风速偏小，其中新疆北部、河北大部、山东北部、江苏南部、云南北部等地年平均风速明显偏小。黑龙江北部、吉林东部、四川东部、重庆、广西北部、广东西部、福建大部、湖南 北部、湖北西部、河南南部等地年平均风速偏大，  其中吉林东部、四川东部、重庆、湖南北部、 湖北西部、广东西部等地年平均风速明显偏大。其他地区年平均风速接近正常(图 1.4)。
 
@@ -50,7 +50,7 @@
 
 3. 各省(区、市)风能资源
 
-2022 年， 各省(区、市) 70 米高度年平均风速在 4.0m/s ~ 6.5m/s 之间(图 1.7)  ，其中， 黑龙江、吉林、内蒙古 3 个省(区)  年平均风速达到 6.0m/s 以上。各省(区、市)  70 米高 度年平均风功率密度在 85.2 W/m²   ~ 284.4 W/m² 之间(图 1.7)  ，其中，  甘肃、新疆、西藏、 辽宁、黑龙江、吉林、内蒙古 7 个省(区)年平均风功率密度达到 200 W/m²  以上。
+2022 年， 各省(区、市) 70 米高度年平均风速在 4.0m/s - 6.5m/s 之间(图 1.7)  ，其中， 黑龙江、吉林、内蒙古 3 个省(区)  年平均风速达到 6.0m/s 以上。各省(区、市)  70 米高 度年平均风功率密度在 85.2 W/m² - 284.4 W/m² 之间(图 1.7)  ，其中，  甘肃、新疆、西藏、 辽宁、黑龙江、吉林、内蒙古 7 个省(区)年平均风功率密度达到 200 W/m²  以上。
 
 各省(区、市)70 米高度年平均风速和风功率密度具体数值详见附录 3。
 
@@ -71,7 +71,7 @@
 
 3. 各省(区、市)风能资源
 
-2022 年，各省(区、市)100米高度年平均风速在 4.3m/s ~ 7.0m/s 之间，有 22 个 省(区、市)年平均风速超过 5.0m/s，其中辽宁、黑龙江、吉林、内蒙古、西藏、上海、青 海 7 个省(区)年平均风速超过 6.0m/s。各省(区、市)  100 米高度年平均风功率密度在 98.64 W/m²   ~  350.59 W/m²  之 间，有 23 个省(区、市 ) 年平均风功率密度超过150W/m²，其中13个省(区、市)年平均风功率密度超过200W/m²，吉林、内蒙古 2 个省(区、 市)年平均风功率密度超过 300 W/m² 。
+2022 年，各省(区、市)100米高度年平均风速在 4.3m/s - 7.0m/s 之间，有 22 个 省(区、市)年平均风速超过 5.0m/s，其中辽宁、黑龙江、吉林、内蒙古、西藏、上海、青 海 7 个省(区)年平均风速超过 6.0m/s。各省(区、市)  100 米高度年平均风功率密度在 98.64 W/m² - 350.59 W/m²  之 间，有 23 个省(区、市 ) 年平均风功率密度超过150W/m²，其中13个省(区、市)年平均风功率密度超过200W/m²，吉林、内蒙古 2 个省(区、 市)年平均风功率密度超过 300 W/m² 。
 
 各省(区、市)100 米高度年平均风速和风功率密度具体数值详见附录 4。
 
@@ -86,17 +86,17 @@
 2. 水平面总辐照量西部地区大于中东部地区
 
 我国太阳能资源地区性差异较大， 呈现西部地区大于中东部地区， 高原、少雨干燥地区大， 平原、多雨高湿地区小的特点(图 2.2)。
-根据我国太阳能资源总量等级划分标准1，2022年，新疆大部、西藏、西北、西南西部、内蒙古大部、华北、华中大部、华东大部、华南大部地区年水平面总辐照量超过 1400kWh/m2，
-其中，西藏大部、青海中部及北部局部地区年水平面总辐照量超过 1750kWh/m2，为太阳能资源最丰富区；
+根据我国太阳能资源总量等级划分标准1，2022年，新疆大部、西藏、西北、西南西部、内蒙古大部、华北、华中大部、华东大部、华南大部地区年水平面总辐照量超过 1400kWh/m²，
+其中，西藏大部、青海中部及北部局部地区年水平面总辐照量超过 1750kWh/m²，为太阳能资源最丰富区；
 新疆大部、内蒙古大部、西北中部及东部、华北、华东、华南东部等地年太阳总辐射年辐照量划分为四个等级：
   最丰富(≥1750kWh/m²)、
-  很丰富(1400~1750kWh/m²)、
-  丰富(1050~1400kWh/m²)、
+  很丰富(1400-1750kWh/m²)、
+  丰富(1050-1400kWh/m²)、
   一般(<1050kWh/m²)。
 
-水平面总辐照量 1400kWh/m2 ~ 1750kWh/m2，为太阳能资源很丰富区；
-东北东部、四川东部、 重庆、贵州、湖南西部、广西北部及东部等地年水平面总辐照量 1050kWh/m2 ~ 1400kWh/ m2 ，为太阳能资源丰富区。
-全国年水平面总辐照量几乎全大于 1050kWh/m2 ，基本无太阳能资源一般区。
+水平面总辐照量 1400kWh/m² - 1750kWh/m²，为太阳能资源很丰富区；
+东北东部、四川东部、 重庆、贵州、湖南西部、广西北部及东部等地年水平面总辐照量 1050kWh/m² - 1400kWh/m² ，为太阳能资源丰富区。
+全国年水平面总辐照量几乎全大于 1050kWh/m² ，基本无太阳能资源一般区。
 
 各省(区、市)2022 年水平面总辐照量具体数值详见附录 5。
 
@@ -112,8 +112,6 @@
 
 固定式光伏发电可利用的太阳能资源是光伏组件按照最佳倾角放置时能够接收的太阳总 辐照量(简称“最佳斜面总辐照量”)。根据目前国内的设计经验，按照80%的总体系统效率，计算出固定式光伏电站的首年利用小时数。图 2.5 为全国固定式光伏发电最佳倾角空间分布。
 
-|![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.022.png)|图 2.5   全国固定式光伏发电最佳倾角分布
-
 1. 全国平均年最佳斜面总辐照量较常年偏大
 
 2022年，全国平均年最佳斜面总辐照量为 1815.8kWh/m²，较近30年平均值偏大40.8kWh/m²，较近10年平均值偏大50.8kWh/m²，较2021年偏大67.1kWh/m²；
@@ -125,7 +123,7 @@
 |![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.023.png)|图 2.6   2022 年全国固定式光伏发电最佳斜面年总辐照量分布(单位：kWh/m²)
 |![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.024.png)|图 2.7   2022 年全国固定式光伏发电首年利用小时数分布(单位：小时)
 
-2022 年，除四川东部、重庆、贵州、湖南西部等地外，我国大部分地区最佳斜面总辐照 量超过 1400kWh/m²，首年利用小时数在 1100 小时以上， 其中， 新疆、西藏、青海、甘肃北部、 四川西部、内蒙古、宁夏北部、陕西北部、山西北部、河北、北京、天津、东北地区东部等 地年最佳斜面总辐照量超过 1800kWh/m²，首年利用小时数在 1500 小时以上；四川东部、重庆、 贵州、湖南西部等地在 1000kWh/m²   ~  1400kWh/m² 之间，首年利用小时数一般低于 1100 小时。
+2022 年，除四川东部、重庆、贵州、湖南西部等地外，我国大部分地区最佳斜面总辐照 量超过 1400kWh/m²，首年利用小时数在 1100 小时以上， 其中， 新疆、西藏、青海、甘肃北部、 四川西部、内蒙古、宁夏北部、陕西北部、山西北部、河北、北京、天津、东北地区东部等 地年最佳斜面总辐照量超过 1800kWh/m²，首年利用小时数在 1500 小时以上；四川东部、重庆、 贵州、湖南西部等地在 1000kWh/m² - 1400kWh/m² 之间，首年利用小时数一般低于 1100 小时。
 
 各省(区、市)2022 年固定式光伏发电最佳斜面年总辐照量具体数值详见附录 6。
 
@@ -149,7 +147,7 @@
 
 估数据集”，两类数据集的水平分辨率为 1km×1km，来源于中国气象局风能太阳能中心；
 
-(2) 2012 ~ 2022 年全国气象站逐时风速观测资料，1992 ~ 2022年全国气象站逐月日照时数观测资料，来源于国家气象信息中心；
+(2) 2012 - 2022 年全国气象站逐时风速观测资料，1992 - 2022年全国气象站逐月日照时数观测资料，来源于国家气象信息中心；
 
 (3) 部分测风塔观测数据，来源于相关新能源企业。
 
@@ -217,7 +215,7 @@
 
 各省(区、市)2022 年 70 米高度层风能资源平均值
 
-|序号|省份|平均风速(m/s)|平均风功率密度(W/m2 )|
+|序号|省份|平均风速(m/s)|平均风功率密度(W/m² )|
 | :- | :- | :- | :- |
 |1|北京|4\.54|134\.09|
 |2|天津|5\.11|153\.33|
@@ -255,7 +253,7 @@
 
 各省(区、市)2022 年 100 米高度层风能资源平均值
 
-|序号|省份|平均风速(m/s)|平均风功率密度(W/m2 )|
+|序号|省份|平均风速(m/s)|平均风功率密度(W/m² )|
 | :- | :- | :- | :- |
 |1|北京|4\.91|169\.70|
 |2|天津|5\.60|207\.38|
@@ -293,7 +291,7 @@
 
 各省(区、市)2022 年水平面总辐照量平均值
 
-|序号|省份|水平面总辐照量(kWh/m2 )|
+|序号|省份|水平面总辐照量(kWh/m² )|
 | :- | :- | :- |
 |1|北京|1527\.6|
 |2|天津|1561\.7|
@@ -331,7 +329,7 @@
 
 各省(区、市)2022 年固定式光伏发电最佳斜面总辐照量平均值
 
-|序号|省份|最佳斜面总辐照量(kWh/m2 )|
+|序号|省份|最佳斜面总辐照量(kWh/m² )|
 | :- | :- | :- |
 |1|北京|1866\.4|
 |2|天津|1883\.0|
@@ -365,16 +363,9 @@
 |30|宁夏|1862\.8|
 |31|新疆|1904\.8|
 
-
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.027.png)
-
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.028.png)
-
 联系单位：中国气象局风能太阳能中心
 
 地       址：北京市海淀区中关村南大街 46 号
 电       话：010 -68406469   010 -68409892
-
-![](Aspose.Words.b024515a-7698-432a-9171-f4f4962e859e.029.jpeg)
 
 关注公众号  下载电子版
