--- a/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
+++ b/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
@@ -89,10 +89,10 @@
 根据我国太阳能资源总量等级划分标准1，2022年，新疆大部、西藏、西北、西南西部、内蒙古大部、华北、华中大部、华东大部、华南大部地区年水平面总辐照量超过 1400kWh/m²，
 其中，西藏大部、青海中部及北部局部地区年水平面总辐照量超过 1750kWh/m²，为太阳能资源最丰富区；
 新疆大部、内蒙古大部、西北中部及东部、华北、华东、华南东部等地年太阳总辐射年辐照量划分为四个等级：
-  最丰富(≥1750kWh/m²)、
-  很丰富(1400-1750kWh/m²)、
-  丰富(1050-1400kWh/m²)、
-  一般(<1050kWh/m²)。
+  最丰富(大于等于1750kWh/m²)、
+  很丰富(在1400-1750kWh/m²之间)、
+  丰富(在1050-1400kWh/m²之间)、
+  一般(小于1050kWh/m²)。
 
 水平面总辐照量 1400kWh/m² - 1750kWh/m²，为太阳能资源很丰富区；
 东北东部、四川东部、 重庆、贵州、湖南西部、广西北部及东部等地年水平面总辐照量 1050kWh/m² - 1400kWh/m² ，为太阳能资源丰富区。
