--- a/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
+++ b/pages/docs/2022年中国风能太阳能资源年景公报--中国气象局(1).mdx
@@ -19,7 +19,7 @@
 
 
 ## 摘 要 ABSTRACT
-2022 年，全国风能资源为正常略偏小年景。10 米高度年平均 风速较近 10 年(2012 - 2021 年，下同) 平均值偏小 0.82%，较 2021 年偏小 0.96%。70 米高度年平均风速约 5.4m/s，  年平均风 功率密度约 193.1 W/m²；  100 米高度年平均风速约 5.7m/s，年平 均风功率密度约 227.4 W/m² 。其中，湖北、江西、湖南、重庆较 近 10 年平均值偏大，  贵州、山西、宁夏、江苏、山东、河北、天津、 内蒙古、西藏、河南、云南偏小，  其他地区与近 10 年平均值接近。</p><p>2022 年，全国太阳能资源为偏大年景。年平均水平面总辐 照 量 约 1563.4 kWh/m²，   为 近 30 年(1992 -  2021 年，   下 同 )  最高，较近 30 年平均值偏大 45.3kWh/m²，较近 10 年平均值 偏 大 54.0kWh/m²，   较 2021 年 偏 大 70.0kWh/m²；   光 伏 发 电 年 最佳斜面总辐照量约 1815.8 kWh/m²，较近 30 年平均值偏大 40.8kWh/m²，  较近 10 年平均值偏大 50.8kWh/m²，  较 2021 年偏 大 67.1kWh/m²。其中，东北、华北、华中、华东、华南、西南地 区东部等地偏大，青藏高原西部偏小
+2022 年，全国风能资源为正常略偏小年景。10 米高度年平均 风速较近10年(2012 - 2021 年，下同)平均值偏小 0.82%，较2021年偏小0.96%。70 米高度年平均风速约 5.4m/s，年平均风功率密度约 193.1 W/m²；100 米高度年平均风速约5.7m/s，年平均风功率密度约 227.4 W/m² 。其中，湖北、江西、湖南、重庆较近10年平均值偏大，贵州、山西、宁夏、江苏、山东、河北、天津、内蒙古、西藏、河南、云南偏小，其他地区与近 10 年平均值接近。2022 年，全国太阳能资源为偏大年景。年平均水平面总辐 照 量 约 1563.4 kWh/m²，为近30年(1992 -  2021 年，下同)最高，较近30年平均值偏大45.3kWh/m²，较近10年平均值 偏 大 54.0kWh/m²，较2021年偏大70.0kWh/m²；光伏发电年最佳斜面总辐照量约1815.8 kWh/m²，较近30年平均值偏大 40.8kWh/m²，较近10年平均值偏大50.8kWh/m²，较2021年偏大67.1kWh/m²。其中，东北、华北、华中、华东、华南、西南地区东部等地偏大，青藏高原西部偏小。
 
 
 
@@ -29,7 +29,7 @@
 
 2022 年，全国 10 米高度年平均风速较近 10 年平均值偏小 0.82%(图 1.1)  ，较 2021 年偏小 0.96%，属正常略偏小年景。
 
-从空间分布来看， 地区差异性较大(图 1.2) 。海南、河北、江苏、贵州、云南、西藏、山东、 青海、上海、新疆 10 个省(区、市)总体偏小，其中海南、河北、江苏、贵州、云南 5 个省 	(区、市)明显偏小；重庆、江西、湖北、吉林、黑龙江、福建、四川、湖南 8 个省(区、市) 总体偏大，其中重庆明显偏大；其它省(区、市)基本正常。
+从空间分布来看， 地区差异性较大(图 1.2) 。海南、河北、江苏、贵州、云南、西藏、山东、青海、上海、新疆 10 个省(区、市)总体偏小，其中海南、河北、江苏、贵州、云南5个省(区、市)明显偏小；重庆、江西、湖北、吉林、黑龙江、福建、四川、湖南8个省(区、市) 总体偏大，其中重庆明显偏大；其它省(区、市)基本正常。
 
 
 ### (二)70 米高度
